# chatbot-LAREDO

./: README.md  requitements.txt  run-app.bat  run-dev.bat  setup_app.bat
backend/: .gitignore  LICENSE  README.md  init.bat  pyproject.toml  requitements.txt  run_backend.bat  setup_backend.bat
backend/database/1d556c19-bf8c-47f8-8a06-76807e11921c/: index_metadata.pickle
backend/database/da81a5e9-b73d-46b7-bb5c-040107062995/: index_metadata.pickle
backend/docs/: user-guide-questions.md
backend/src/: wsgi.py
backend/src/api/: api.py  chatbot_service.py
backend/src/chatbot/: chat_initializer.py  graph_initializer.py
backend/src/config/: config_chatbot.py  config_init.py  config_url.py
backend/src/utils/: directory_loader.py  document_manager.py  embedding_manager.py  gemini_model_manager.py  key_manager.py  ollama_model_manager.py  web_loader.py
backend/tests/: ollama_model_manager_test.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  run_frontend.bat  setup_frontend.bat  tailwind.config.js  vite.config.js
frontend/src/: main.jsx
frontend/src/app/: App.jsx
frontend/src/core/api/: endpoints.js  errors.js  index.js
frontend/src/core/chatbot/: useChatbotConversation.js
frontend/src/core/hooks/: useClickOutside.js  useResizablePanel.js  useScrollToBottom.js
frontend/src/pages/: ExamplePage.jsx
frontend/src/ui/components/: ChatbotWidget.jsx
frontend/src/ui/styles/: chatbot-widget.css  index.css
frontend/theme/: animations.js  colors.js  keyframes.js  shadows.js
src/chatbot/: graph_initializer.py  main.py
src/config/: config_chatbot.py  config_url.py
src/utils/: document_manager.py  logger_manager.py  web_loader.py
tests/: document_manager_test.py  embedding_manager_test.py
(+14 files in other folders)
