[tool.poetry]
name = "LaredocMind-backend"
version = "0.1.1"
description = "LaredocMind: The knowledge you seek, before you ask."
authors = ["Gabriel Gomez Garcia <ggg239@alumnos.unican.es>"]
repository = "https://github.com/Gabiz053/chatbot-laredo"
keywords = ["LaredocMind", "chatbot", "backend", "langchain", "flask"]
license = "MIT"
# package-mode = false

[tool.poetry.dependencies]
# Core libraries
python = ">=3.13, <4.0"
loguru = "*"

# LangChain and related packages
langchain = "*"
langchain-chroma = "*"
langchain-community = "*"
langchain-google-genai = "*"
langchain-ollama = "*"
langsmith = "*"
langgraph = "*"

# Web scraping and markdown processing
bs4 = "*"
markdownify = "*"

# Environment variables
dotenv = "*"

# Natural language processing
nltk = "*"
rouge-score = "*"

# Web framework
flask = "*"
flask_cors = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
